--- a/mysite/templates/candidate_list.html
+++ b/mysite/templates/candidate_list.html
@@ -7,7 +7,7 @@
 {% block content %}
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-<form action="{% url 'Głosuj' logged_person.pesel election.ID_WYBOROW%}" method="post" class="">
+<form action="{% url 'Głosuj' election.ID_WYBOROW%}" method="post" class="">
 <div  class="select2-container " style="background-color: aqua; border-radius: 10px; padding: 15px">
 <h4>Głosujesz w wyborach: {{ election.nazwaWyborow }}</h4>
 <br/>
