--- a/mysite/templates/election_details.html
+++ b/mysite/templates/election_details.html
@@ -29,5 +29,5 @@
 
     <div class="badge" style="font-size: 15px">Frekwencja: {{ turnout }}%</div>
     <br/><br/>
-    <a class="btn btn-primary" href={% url 'Lista wyborów' logged_person.pesel %} >Powrót do listy wyborów</a>
+    <a class="btn btn-primary" href={% url 'Lista wyborów' %} >Powrót do listy wyborów</a>
 {% endblock %}
