--- a/mysite/templates/election_list.html
+++ b/mysite/templates/election_list.html
@@ -35,14 +35,14 @@
     <td>
     <!-- Nie głosowano a wybory wciąż się nie zakończyły -->
         {% if not election.voted.oddalGlos and election.in_time%}
-        <a class="btn btn-primary" href={% url 'Lista kandydatów' logged_person.pesel election.myElection.ID_WYBOROW  %} >Głosuj</a>
+        <a class="btn btn-primary" href={% url 'Lista kandydatów' election.myElection.ID_WYBOROW  %} >Głosuj</a>
         {% else %}
             <!-- Wybory nie zostały zakończone, ale już w nich zagłosowano -->
             {% if election.in_time %}
-                <a class="btn btn-default" href={% url 'Szczegóły wyborów' logged_person.pesel election.myElection.ID_WYBOROW  %} >Aktualne wyniki</a>
+                <a class="btn btn-default" href={% url 'Szczegóły wyborów' election.myElection.ID_WYBOROW  %} >Aktualne wyniki</a>
             {% else %}
                 <!-- Po zakończeniu wyborów istnieje możliwość wyświetlenia wyników -->
-                <a class="btn btn-info" href={% url 'Wyniki wyborów' logged_person.pesel election.myElection.ID_WYBOROW  %} >Wynik wyborów</a>
+                <a class="btn btn-info" href={% url 'Wyniki wyborów' election.myElection.ID_WYBOROW  %} >Wynik wyborów</a>
             {% endif %}
         {% endif %}
     </td>
