--- a/mysite/templates/election_results.html
+++ b/mysite/templates/election_results.html
@@ -28,5 +28,5 @@
 </table>
     <br/>
     <div class="badge">Frekwencja: {{ turnout }}</div>
-    <a class="btn btn-primary" href={% url 'Lista wyborów' logged_person.pesel %} >Powrót do listy wyborów</a>
+    <a class="btn btn-primary" href={% url 'Lista wyborów'  %} >Powrót do listy wyborów</a>
 {% endblock %}
