--- a/mysite/templates/ModTemplates/new_mod.html
+++ b/mysite/templates/ModTemplates/new_mod.html
@@ -8,7 +8,7 @@
 <h1>Dodaj moderatora</h1>
 <form method="post" action="{% url 'Nowy moderator' %}" >
     {% csrf_token %}
-    <table>
+    <table style="border-collapse:separate;border-spacing: 10px">
     {{ form.as_table }}
     </table>
     <input type="submit" name="submit" value="Zatwierdź" />
