--- a/mysite/templates/ModTemplates/mod_add_person_to_election.html
+++ b/mysite/templates/ModTemplates/mod_add_person_to_election.html
@@ -9,7 +9,7 @@
 <h1>Dodaj osobę do wyborów</h1>
 <form  method="post" action="{% url 'Dodaj wyborców mod' election_id %}">
     {% csrf_token %}
-    <table>
+    <table style="border-collapse:separate;border-spacing: 10px">
     {{ form.as_table }}
     </table>
     <input type="submit" name="submit" value="Zatwierdź" />
