--- a/mysite/templates/ModTemplates/mod_new_election.html
+++ b/mysite/templates/ModTemplates/mod_new_election.html
@@ -9,7 +9,7 @@
 <h1>Dodaj wybory</h1>
 <form id="wybory_form" method="post" action="{% url 'Nowe wybory mod' %}">
     {% csrf_token %}
-    <table>
+    <table style="border-collapse:separate;border-spacing: 10px">
     {{ form.as_table }}
     </table>
     <input type="submit" name="submit" value="Zatwierdź" />
