--- a/mysite/templates/ModTemplates/mod_new_person.html
+++ b/mysite/templates/ModTemplates/mod_new_person.html
@@ -8,7 +8,7 @@
 <h1>Dodaj wyborcę</h1>
 <form id="osoba_form" method="post" action="{% url 'Nowy wyborca mod' %}" >
     {% csrf_token %}
-    <table>
+    <table style="border-collapse:separate;border-spacing: 10px">
     {{ form.as_table }}
     </table>
     <input type="submit" name="submit" value="Zatwierdź" />
