--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -13,7 +13,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <link rel="stylesheet" href="{% static 'css/mystyles.css' %}">
-<script src="{% static 'app.js' %}"></script>
+<script src="{% static 'js/app.js' %}"></script>
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 {% bootstrap_messages %}
@@ -27,6 +27,7 @@
     <div>
         Zalogowano jako {{ username }}  <a href = "{% url 'Wyloguj' %}" class="btn btn-default">Wyloguj</a>
     </div>
+    <br/>
 {% endif %}
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
  <title>{% block title %}{% endblock %}</title>
