wyświetlanie jako mod

--- a/mysite/templates/ModTemplates/mod_login.html
+++ b/mysite/templates/ModTemplates/mod_login.html
@@ -5,6 +5,13 @@
 {% bootstrap_messages %}
 {% block title %}Logowanie moderatora{% endblock %}
 {% block content %}
+    {% if error_message %}
+    <br/>
+    <div class="alert alert-danger">
+    <strong>{{ error_message }}</strong>
+    </div>
+        <br/>
+    {% endif %}
 <h1>Zaloguj</h1>
 <form method="post" action="{% url 'Logowanie moderatora' %}" >
     {% csrf_token %}
