--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -29,7 +29,13 @@
     </div>
     <br/>
 {% endif %}
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+{% if error_message %}
+    <br/>
+    <div class="alert alert-danger">
+    <strong>{{ error_message }}</strong>
+    </div>
+        <br/>
+    {% endif %}
  <title>{% block title %}{% endblock %}</title>
  </head>
  <body class="container">
