--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -6,7 +6,7 @@
 {% block title %}Wybory{% endblock %}
 {% block content %}
 {% bootstrap_button "Obszar użytkownika" href='login/user'  %} <br/><br/>
-    {% bootstrap_button "Obszar administratora" href='login/mod' button_type="link" button_class="btn-primary" %}
+    {% bootstrap_button "Obszar moderatora" href='login/mod' button_type="link" button_class="btn-primary" %}
 {% if all_elections %}
     <table class="table" align="center">
     <caption class="text-center">Najnowsze wybory</caption>
