--- a/mysite/templates/ModTemplates/mod_new_election.html
+++ b/mysite/templates/ModTemplates/mod_new_election.html
@@ -5,11 +5,14 @@
 {% bootstrap_messages %}
 {% block title %}Tworzenie nowych wyborów{% endblock %}
 {% block content %}
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <script src="{{ STATIC_URL }}js/bootstrap.js"></script>
+    {{ form.media }}
 <h1>Dodaj wybory</h1>
 <form id="wybory_form" method="post" action="{% url 'Nowe wybory mod' %}">
     {% csrf_token %}
-    <table style="border-collapse:separate;border-spacing: 10px">
+    <table style="border-collapse:separate;border-spacing: 5px">
     {{ form.as_table }}
     </table>
     <input type="submit" name="submit" value="Zatwierdź" />
