--- a/mysite/templates/election_results.html
+++ b/mysite/templates/election_results.html
@@ -1,13 +1,42 @@
-{% extends "base.html" %}
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-{% bootstrap_messages %}
-{% block title %}Wybory{% endblock %}
-{% block content %}
-    <table class="table" align="center">
-<caption class="text-center">Wyniki wyborów: {{ election.nazwaWyborow }}</caption>
-<tr bgcolor="#00ffff">
+
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Raport</title>
+    <style type="text/css">
+        @page {
+            size: A4;
+            margin: 1cm;
+        }
+        .table {
+            width: 100%;
+            max-width: 100%;
+            margin-bottom: 5px;
+            background-color: #fff;
+        }
+        .table th,
+        .table td {
+            padding: 5px;
+            vertical-align: top;
+            border-top: 1px solid #000;
+            text-align: center;
+        }
+        .table thead th {
+            vertical-align: bottom;
+            border-bottom: 2px solid #000;
+        }
+        .table tbody + tbody {
+            border-top: 2px solid #000;
+        }
+
+
+    </style>
+</head>
+<body>
+    <table class="table" align="center" style="font-size: x-large">
+<caption class="text-center" style="font-size: xx-large; font-weight: bolder">Wyniki wyborów: {{ election.nazwaWyborow }}</caption>
+<tr style="font-weight: bold">
     <td>
         Kandydat
     </td>
@@ -15,6 +44,7 @@
         Poparcie
     </td>
 </tr>
+{% if candidates %}
 {%for candidate in candidates %}
 <tr>
     <td>
@@ -27,6 +57,11 @@
 {% endfor %}
 </table>
     <br/>
-    <div class="badge">Frekwencja: {{ turnout }}</div>
-    <a class="btn btn-primary" href={% url 'Lista wyborów'  %} >Powrót do listy wyborów</a>
-{% endblock %}
+    <div class="badge" style="font-size: x-large;">Frekwencja: {{ turnout }}%</div>
+{% else %}
+    <br/><br/>
+    <div style="font-size: xx-large">
+    <strong>Brak kandydatów</strong>
+    </div>
+{% endif %}
+</body>
