--- a/mysite/templates/election_results.html
+++ b/mysite/templates/election_results.html
@@ -1,10 +1,11 @@
 
 <!doctype html>
-<html>
+<html lang="pl-PL">
 <head>
     <meta charset="utf-8">
     <title>Raport</title>
     <style type="text/css">
+        
         @page {
             size: A4;
             margin: 1cm;
